Update About Me section with revised language and educational background

--- a/index.html
+++ b/index.html
@@ -117,24 +117,25 @@
             <main class="col-lg">
 
                 <h2>About Me</h2>
-                <p>I am a Ph.D. student at Osaka University, specializing in computational fluid dynamics and 3D
-                    bioprinting. My passion for science and engineering took root in my childhood, and it was during my
-                    undergraduate studies in Mechanical Engineering at the University of California, Santa Barbara, I
-                    found a particular interest in computational problems. This intersection between science and
-                    computation led me to learn to program, opening up a whole new world of problem-solving techniques,
-                    including the powerful concept of computational thinking.</p>
-                <p>With skills in Python, C, JavaScript, HTML/CSS, and machine learning, I began to see how
-                    programming could revolutionize traditional engineering fields. The blend of machine learning and
-                    biotechnology, in particular, holds vast potential that I find truly exciting. As a MEXT scholar in
-                    Japan, I've had the opportunity to delve deeper into these areas while supporting Osaka University's
-                    Main Library undergraduates.</p>
-                <p>Beyond academia, I maintain a rich and varied set of interests. I find joy and challenge in mountain
-                    climbing, and I have a passion for traveling, which offers me a broader cultural perspective and
-                    enriches my understanding of the world. I firmly believe in lifelong learning, frequently immersing
-                    myself in online courses to expand my knowledge base. To unwind, I often lose myself in the pages of
-                    a good book, finding it a source of relaxation and wisdom. Through these experiences, I continue to
-                    grow as a student, researcher, and individual.
-                </p>
+
+                <p>I'm a Ph.D. student at Osaka University, focusing on computational fluid dynamics and 3D bioprinting.
+                    My fascination with science and engineering started early, but it was during my Mechanical
+                    Engineering studies at UC Santa Barbara that I discovered my passion for computational
+                    problem-solving. This intersection of science and computation sparked my interest in programming,
+                    opening up a world of new problem-solving techniques and introducing me to the power of
+                    computational thinking.</p>
+
+                <p>As I developed skills in Python, C, JavaScript, HTML/CSS, and machine learning, I began to see how
+                    programming could transform traditional engineering fields. I'm particularly excited about the
+                    potential of combining machine learning with biotechnology. As a MEXT scholar in Japan, I've had the
+                    chance to dive deeper into these areas while also supporting undergraduates at Osaka University's
+                    Main Library.</p>
+
+                <p>Outside of my academic pursuits, I have a diverse range of interests. I love the challenge of
+                    mountain climbing and the perspective-broadening experiences of travel. I'm a firm believer in
+                    lifelong learning, often immersing myself in online courses to expand my knowledge. To unwind, I
+                    lose myself in a good book, finding it both relaxing and enlightening. These experiences continue to
+                    shape me not just as a student and researcher, but as a person.</p>
 
                 <h2>Publications</h2>
                 <ol>
@@ -152,6 +153,26 @@
                         through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>,
                         <i>7</i>(5), 3506-3514. <a
                             href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
+                </ol>
+
+                <h2>Conferences</h2>
+                <ol>
+                    <li>
+                        The 55th Autumn Meeting of The Society of Chemical Engineers, Japan, Hokkaido University,
+                        September 10-13, 2024<br>
+                        Presentation Title: Predictive modeling of cell viability in extrusion-based 3D bioprinting
+                        using machine learning <b>[<a href="https://www.scej.org/news/detail/23235/">Featured
+                                Presentation (22 out of 1130)</a>]</b><br>
+                        <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai<br>
+                    </li>
+                    <li>
+                        The 53rd Autumn Meeting of The Society of Chemical Engineers, Japan, Shinshu University,
+                        September 14-16, 2022<br>
+                        Presentation Title: A Numerical Investigation of Stresses, Printing Efficiency, Printability,
+                        and Cell Viability in Nozzle Printheads for 3D Extrusion Bioprinting<br>
+                        <b>Colin Zhang</b>, Mitsuyuki Hidaka, Masaru Kojima, Shinji
+                        Sakai, and Yasunori Okano
+                    </li>
                 </ol>
 
                 <h2>Japanese News Scraper</h2>
