--- a/index.html
+++ b/index.html
@@ -214,18 +214,23 @@
 
                 <h2>Research Interests <a href="https://en.wikipedia.org/wiki/3D_bioprinting"><i
                             class="fa-brands fa-wikipedia-w"></i></a></h2>
-                <p>3D extrusion bioprinting is rapidly developing in the field of tissue engineering, enabling the
-                    manufacturing of customized biologically engineered structures. This research attempts to optimize
-                    the shape of the needle, extrusion velocity, printability, and cell viability using numerical
-                    analysis and machine
-                    learning to control the fluid shear stress inside the needle.</p>
+                <p>3D extrusion bioprinting is advancing rapidly in the field of tissue engineering, enabling the
+                    creation of complex, biologically engineered structures with high precision. Key challenges in the
+                    process include optimizing needle geometry, extrusion parameters, and maintaining cell viability.
+                    Numerical analysis and machine learning are increasingly applied to control factors such as fluid
+                    shear stress, ink rheology, and extrusion velocity, improving printability and ensuring better
+                    cell survival rates in the printed structures. This combination of computational methods and
+                    experimental validation offers a promising path toward more effective bioprinting solutions for
+                    tissue regeneration and therapeutic applications.
+                </p>
                 <figure style="text-align: center;">
                     <p>
-                        <img src="static/printability_setup.png" alt="printability_setup" width="350">
+                        <img src="static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="550">
                     </p>
-                    <figcaption><strong>Figure 1. </strong>The printability assessment setup is designed
-                        to evaluate and optimize the performance of 3D bioprinting processes, such as bioink extrusion
-                        and filament formation.
+                    <figcaption><strong>Figure 1. </strong>Graphical workflow for bioprinting optimization: Rheological
+                        testing provides bioink properties for numerical simulation of needle extrusion, followed by
+                        live/dead cell viability analysis. A machine learning model integrates cell type, ink viscosity,
+                        and extrusion parameters to predict and optimize cell viability outcomes.
                     </figcaption>
                 </figure>
 
