Optimize bioprinting workflow and update Japanese translation

--- a/index.html
+++ b/index.html
@@ -137,47 +137,6 @@
                     lose myself in a good book, finding it both relaxing and enlightening. These experiences continue to
                     shape me not just as a student and researcher, but as a person.</p>
 
-                <h2>Publications</h2>
-                <ol>
-                    <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
-                        (2024).
-                        Machine learning-based prediction and optimization framework for as-extruded cell viability in
-                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
-                        <a
-                            href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
-                    </li>
-                    <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai. (2024).
-                        Experimental and numerical approaches for optimizing conjunction area design to enhance
-                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
-                            Bioprinting</i>, in press.</li>
-
-                    <li>Wildan Mubarok, <b>Colin Zhang</b>, and Shinji Sakai. (2024). 3D Bioprinting of Sugar Beet
-                        Pectin
-                        through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>,
-                        <i>7</i>(5), 3506-3514. <a
-                            href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
-                    </li>
-                </ol>
-
-                <h2>Conferences</h2>
-                <ol>
-                    <li>
-                        The 55th Autumn Meeting of The Society of Chemical Engineers, Japan, Hokkaido University,
-                        September 10-13, 2024<br>
-                        Presentation Title: Predictive modeling of cell viability in extrusion-based 3D bioprinting
-                        using machine learning <b>[<a href="https://www.scej.org/news/detail/23235/">Featured
-                                Presentation (22 out of 1130)</a>]</b><br>
-                        <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai<br>
-                    </li>
-                    <li>
-                        The 53rd Autumn Meeting of The Society of Chemical Engineers, Japan, Shinshu University,
-                        September 14-16, 2022<br>
-                        Presentation Title: A Numerical Investigation of Stresses, Printing Efficiency, Printability,
-                        and Cell Viability in Nozzle Printheads for 3D Extrusion Bioprinting<br>
-                        <b>Colin Zhang</b>, Mitsuyuki Hidaka, Masaru Kojima, Shinji
-                        Sakai, and Yasunori Okano
-                    </li>
-                </ol>
 
                 <h2>Japanese News Scraper</h2>
                 <div id="newsBox"
@@ -224,15 +183,61 @@
                     tissue regeneration and therapeutic applications.
                 </p>
                 <figure style="text-align: center;">
-                    <p>
-                        <img src="static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="550">
+                    <p><a href="https://doi.org/10.1080/17452759.2024.2400330">
+                            <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="650">
+                        </a>
                     </p>
-                    <figcaption><strong>Figure 1. </strong>Graphical workflow for bioprinting optimization: Rheological
-                        testing provides bioink properties for numerical simulation of needle extrusion, followed by
+                    <figcaption><strong>Figure 0. </strong>Graphical workflow for bioprinting optimization: Rheological
+                        testing provides ink properties for numerical simulation of needle extrusion, followed by
                         live/dead cell viability analysis. A machine learning model integrates cell type, ink viscosity,
                         and extrusion parameters to predict and optimize cell viability outcomes.
                     </figcaption>
                 </figure>
+
+
+
+                <h2>Publications</h2>
+                <ol>
+                    <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
+                        (2024).
+                        Machine learning-based prediction and optimization framework for as-extruded cell viability in
+                        extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
+                        <a
+                            href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
+                    </li>
+                    <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai. (2024).
+                        Experimental and numerical approaches for optimizing conjunction area design to enhance
+                        switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
+                            Bioprinting</i>, in press.</li>
+
+                    <li>Wildan Mubarok, <b>Colin Zhang</b>, and Shinji Sakai. (2024). 3D Bioprinting of Sugar Beet
+                        Pectin
+                        through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>,
+                        <i>7</i>(5), 3506-3514. <a
+                            href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
+                    </li>
+                </ol>
+
+                <h2>Conferences</h2>
+                <ol>
+                    <li>
+                        The 55th Autumn Meeting of The Society of Chemical Engineers, Japan, Hokkaido University,
+                        September 10-13, 2024<br>
+                        Presentation Title: Predictive modeling of cell viability in extrusion-based 3D bioprinting
+                        using machine learning <b>[<a href="https://www.scej.org/news/detail/23235/">Featured
+                                Presentation (22 out of 1130)</a>]</b><br>
+                        <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai<br>
+                    </li>
+                    <li>
+                        The 53rd Autumn Meeting of The Society of Chemical Engineers, Japan, Shinshu University,
+                        September 14-16, 2022<br>
+                        Presentation Title: A Numerical Investigation of Stresses, Printing Efficiency, Printability,
+                        and Cell Viability in Nozzle Printheads for 3D Extrusion Bioprinting<br>
+                        <b>Colin Zhang</b>, Mitsuyuki Hidaka, Masaru Kojima, Shinji
+                        Sakai, and Yasunori Okano
+                    </li>
+                </ol>
+
 
                 <h2>Course Certificates</h2>
                 <ul>
