Optimize research.html: Adjust image layout and dimensions

--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                     <figcaption><strong>Figure 0. </strong>Graphical workflow for bioprinting optimization: Rheological
                         testing provides ink properties for numerical simulation of needle extrusion, followed by
                         live/dead cell viability analysis. A machine learning model integrates cell type, ink viscosity,
-                        and extrusion parameters to predict and optimize cell viability outcomes.
+                        and extrusion parameters to predict and optimize cell viability outcomes. Created with <a
+                            href="https://www.biorender.com/">BioRender</a>.
                     </figcaption>
                 </figure>
 
