Optimize research.html: Update ordered list start attribute

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 
                 <h2>Publications</h2>
-                <ol>
+                <ol start="0">
                     <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         (2024).
                         Machine learning-based prediction and optimization framework for as-extruded cell viability in
@@ -220,7 +220,7 @@
                 </ol>
 
                 <h2>Conferences</h2>
-                <ol>
+                <ol start="0">
                     <li>
                         The 55th Autumn Meeting of The Society of Chemical Engineers, Japan, Hokkaido University,
                         September 10-13, 2024<br>
