Optimize research.html: Update about me section and fix typos

--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
 
                 <h2>About Me</h2>
 
-                <p>I'm a Ph.D. student at Osaka University, focusing on computational fluid dynamics and 3D bioprinting.
+                <p>I'm a Ph.D. student at Osaka University, focusing on computational fluid dynamics, machine learning
+                    applications,
+                    and 3D bioprinting.
                     My fascination with science and engineering started early, but it was during my Mechanical
                     Engineering studies at UC Santa Barbara that I discovered my passion for computational
                     problem-solving. This intersection of science and computation sparked my interest in programming,
@@ -201,7 +203,7 @@
                 <ol start="0">
                     <li><b>Colin Zhang</b>, Kelum C. M. L. Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         (2024).
-                        Machine learning-based prediction and optimization framework for as-extruded cell viability in
+                        Machine learning-based prediction and optimisation framework for as-extruded cell viability in
                         extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i>, <i>17</i>(1), e2400330.
                         <a
                             href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
