Optimize language links in index.html and templates/ja/index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
                     <h1><a href="">KORIN</a></h1>
 
                     <div class="top-bar">
-                        <span><a href="templates/ja/index.html" class="language-link"><strong>日本語</strong> <i
-                                    class="fa-solid fa-language"></i></a></span>
+                        <span>
+                            <a href="templates/ja/index.html" class="language-link"
+                                style="display: inline-flex; align-items: center;">
+                                <strong>日本語</strong>
+                                <i class="fa-solid fa-language"
+                                    style="font-size: 1.35em; margin-left: 0.2em; line-height: 1;"></i>
+                            </a>
+                        </span>
 
                         <button id="theme-toggler" class="theme-button">
                             <i id="theme-icon" class="fas fa-moon"></i>
