Optimize language links and SEO metadata in index.html and templates/ja/index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 
 <head>
     <meta charset="utf-8">
+
+    <!-- begin SEO -->
+    <title>Homepage - Colin ZHANG</title>
+    <meta property="og:locale" content="en-US">
+    <meta property="og:site_name" content="Colin ZHANG">
+    <meta property="og:title" content="Colin ZHANG">
+    <link rel="canonical" href="https://korinz.github.io/">
+    <meta property="og:url" content="https://korinz.github.io/">
+    <meta property="og:description" content="About me">
+    <script
+        type="application/ld+json"> { "@context" : "http://schema.org", "@type" : "Person", "name" : "Colin ZHANG", "url" : "https://korinz.github.io", "sameAs" : null } </script>
+    <!-- end SEO -->
+
     <meta name="viewport" content="initial-scale=1, width=device-width">
-    <meta property="og:description" content="KORIN's Homepage">
     <meta property="og:image" content="static/web_screenshot.png">
-    <meta property="og:title" content="Homepage - KORIN">
     <link href="static/home.png" rel="icon">
     <link href="static/styles.css" rel="stylesheet">
     <link rel="preload" href="static/printability_setup.png" as="image">
@@ -17,7 +28,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <title>Homepage - KORIN</title>
 </head>
 
 <body
@@ -26,7 +36,7 @@
         <div class="row">
             <aside class="col-lg">
                 <header>
-                    <h1><a href="">KORIN</a></h1>
+                    <h1><a href="">COLIN</a></h1>
 
                     <div class="top-bar">
                         <span>
@@ -114,7 +124,8 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i
                             class="fa-brands fa-square-js"></i></a>
                     <footer>
-                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024 KORIN. All rights
+                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024 KORINZ. All
+                            rights
                             reserved.</span>
                     </footer>
                 </nav>
