Optimize language links and SEO metadata in index.html and templates/ja/index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <p style="font-size: 1rem;">Please note that news updates occur twice on weekdays, around 12 PM
                         and 5 PM. During these update periods, the news fetching function may not work correctly. In
                         addition, please be aware that the 'Fetch News' function extracts a random article from the
-                        four latest headlines on the NHK NEWS WEB EASY website.
+                        15 latest headlines on the NHK NEWS WEB EASY website.
                     </p>
                 </div>
 
