Optimize theme toggle functionality and styles

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                         </span>
 
                         <button id="theme-toggler" class="theme-button">
-                            <i id="theme-icon" class="fas fa-moon"></i>
+                            <i id="theme-icon" class="fas fa-moon" style="color: #ffbe3c;"></i>
                         </button>
                     </div>
 
                     <ul style="list-style-type: none; padding: 0;" class="social-links">
                         <li>
                             <a class="mr-1" href="https://github.com/KORINZ">
-                                <i aria-hidden="true" class="fab fa-github" title="GitHub"></i>
+                                <i aria-hidden="true" class="fab fa-github " title="GitHub"></i>
                                 GitHub
                             </a>
                         </li>
