--- a/index.html
+++ b/index.html
@@ -170,9 +170,10 @@
                     style="width: 100%; height: 350px; overflow: auto; border: 1px solid black; padding: 10px;">
                     <h2 style="font-size: 2.5rem; margin-bottom: 20px; text-align: center;">NHK NEWS WEB EASY Scraper
                     </h2>
-                    <p style=" font-size: 1rem;">Welcome to the NHK NEWS WEB EASY Scraper. This tool helps you fetch
+                    <p style=" font-size: 1rem;">Welcome to the NEWS WEB EASY Scraper. This tool helps you fetch
                         and
-                        display simplified Japanese news articles from the NHK NEWS WEB EASY website. It not only
+                        display simplified Japanese news articles from the <a
+                            href="https://www3.nhk.or.jp/news/easy/">NHK NEWS WEB EASY</a> website. It not only
                         provides you with the news content, but also extracts key vocabulary and their pronunciations,
                         along with dictionary definitions where available.</p>
                     <p style="font-size: 1rem;">To start, simply click on the 'Fetch News' button. You can also copy
