Optimize language and introduction in index.html and templates/ja/index.html

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 
             <main class="col-lg">
 
-                <h2>About Me</h2>
+                <h2>Hello, World!</h2>
 
-                <p>I'm a Ph.D. student at Osaka University, focusing on computational fluid dynamics, machine learning
-                    applications,
-                    and 3D bioprinting.
-                    My fascination with science and engineering started early, but it was during my Mechanical
-                    Engineering studies at UC Santa Barbara that I discovered my passion for computational
+                <p>I'm Colin Zhang, currently a Ph.D. student at Osaka University, focusing on computational
+                    fluid
+                    dynamics, machine learning applications, and 3D bioprinting.
+                    My passion with science and engineering started early, but it was during my mechanical
+                    engineering studies at UC Santa Barbara that I discovered my passion for computational
                     problem-solving. This intersection of science and computation sparked my interest in programming,
                     opening up a world of new problem-solving techniques and introducing me to the power of
                     computational thinking.</p>
