--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
@@ -212,7 +211,8 @@
                 </p>
                 <figure style="text-align: center;">
                     <p><a href="https://doi.org/10.1080/17452759.2024.2400330">
-                            <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="650">
+                            <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="650"
+                                height="464">
                         </a>
                     </p>
                     <figcaption><strong>Figure 1. </strong>Graphical workflow for bioprinting optimization: Rheological
