Optimize image dimensions in index.html and templates/ja/index.html

--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
                 </p>
                 <figure style="text-align: center;">
                     <p><a href="https://doi.org/10.1080/17452759.2024.2400330">
-                            <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="650"
-                                height="464">
+                            <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="600">
                         </a>
                     </p>
                     <figcaption><strong>Figure 1. </strong>Graphical workflow for bioprinting optimization: Rheological
