Optimize image dimensions and update preload link in index.html and templates/ja/index.html

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai. (2024).
                         Experimental and numerical approaches for optimizing conjunction area design to enhance
                         switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
-                            Bioprinting</i>, 4091 (in press).
+                            Bioprinting</i>, <i>10</i>(5), 4091.
                         <br>
                         <a href="https://doi.org/10.36922/ijb.4091">https://doi.org/10.36922/ijb.4091</a>.
                         <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
