--- a/index.html
+++ b/index.html
@@ -262,15 +262,19 @@
                         Presentation Title: Predictive modeling of cell viability in extrusion-based 3D bioprinting
                         using machine learning <b>[<a href="https://www.scej.org/news/detail/23235/">Featured
                                 Presentation (22 out of 1130)</a>]</b><br>
-                        <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai<br>
-                    </li>
+                        <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai <a
+                            href="https://www4.scej.org/meeting/55f/prog/en_progsearch.html?Ae=Zhang%20Colin"><i
+                                class="fas fa-external-link-alt"></i></a>
+
                     <li>
                         The 53rd Autumn Meeting of The Society of Chemical Engineers, Japan, Shinshu University,
                         September 14-16, 2022<br>
                         Presentation Title: A Numerical Investigation of Stresses, Printing Efficiency, Printability,
                         and Cell Viability in Nozzle Printheads for 3D Extrusion Bioprinting<br>
                         <b>Colin Zhang</b>, Mitsuyuki Hidaka, Masaru Kojima, Shinji
-                        Sakai, and Yasunori Okano
+                        Sakai, and Yasunori Okano <a
+                            href="https://www4.scej.org/meeting/53f/prog/en_progsearch.html?Ae=Zhang%20Colin"><i
+                                class="fas fa-external-link-alt"></i></a>
                     </li>
                 </ol>
 
