Optimize news fetching and display functionality
- Update the news fetching functionality to extract a random article from the 10 latest headlines on the NHK NEWS WEB EASY website, instead of 15.
- Remove the dictionary feature for news articles after 2024/10/01 due to changes in the NHK NEWS WEB EASY website.
- Improve the display of news articles by cleaning up the HTML structure and removing unnecessary elements.
- Add global styles for ruby tags to ensure consistent rendering of furigana.
- Update the copy-to-clipboard functionality to remove furigana from the copied text.

Closes #123

--- a/index.html
+++ b/index.html
@@ -175,13 +175,17 @@
                         display simplified Japanese news articles from the <a
                             href="https://www3.nhk.or.jp/news/easy/">NHK NEWS WEB EASY</a> website. It not only
                         provides you with the news content, but also extracts key vocabulary and their pronunciations,
-                        along with dictionary definitions where available.</p>
+                        along with dictionary definitions where available*.</p>
                     <p style="font-size: 1rem;">To start, simply click on the 'Fetch News' button. You can also copy
                         the content to your clipboard using the 'Copy Content' button.</p>
-                    <p style="font-size: 1rem;">Please note that news updates occur twice on weekdays, around 12 PM
-                        and 5 PM. During these update periods, the news fetching function may not work correctly. In
+                    <p style="font-size: 1rem;">During news update periods, the news fetching function may not work
+                        correctly. In
                         addition, please be aware that the 'Fetch News' function extracts a random article from the
-                        15 latest headlines on the NHK NEWS WEB EASY website.
+                        10 latest headlines on the NHK NEWS WEB EASY website.
+                    </p>
+                    <p style="font-size: 1rem;">*The dictionary feature is no longer available for news after 2024/10/01
+                        due
+                        to changes in the NHK NEWS WEB EASY website.
                     </p>
                 </div>
 
