--- a/index.html
+++ b/index.html
@@ -259,11 +259,19 @@
 
                 <h2>Conferences</h2>
                 <ol>
+                    <li>The 90th Annual Meeting of The Society of Chemical Engineers, Japan, Tokyo University of
+                        Science, March 11-14, 2025<br>
+                        Presentation Title: <u>AI-Driven 3D Bioprinting System for Optimizing Printing
+                            Performance</u><br>
+                        <b>Colin Zhang</b>, Kelum Elvitigala, and Shinji Sakai <a
+                            href="https://www4.scej.org/meeting/90a/prog/en_progsearch.html?Ae=Zhang%20Colin"><i
+                                class="fas fa-external-link-alt"></i></a>
+                    </li>
                     <li>
                         The 55th Autumn Meeting of The Society of Chemical Engineers, Japan, Hokkaido University,
                         September 10-13, 2024<br>
-                        Presentation Title: Predictive modeling of cell viability in extrusion-based 3D bioprinting
-                        using machine learning <b>[<a href="https://www.scej.org/news/detail/23235/">Featured
+                        Presentation Title: <u>Predictive modeling of cell viability in extrusion-based 3D bioprinting
+                            using machine learning</u> <b>[<a href="https://www.scej.org/news/detail/23235/">Featured
                                 Presentation (22 out of 1130)</a>]</b><br>
                         <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai <a
                             href="https://www4.scej.org/meeting/55f/prog/en_progsearch.html?Ae=Zhang%20Colin"><i
@@ -272,8 +280,8 @@
                     <li>
                         The 53rd Autumn Meeting of The Society of Chemical Engineers, Japan, Shinshu University,
                         September 14-16, 2022<br>
-                        Presentation Title: A Numerical Investigation of Stresses, Printing Efficiency, Printability,
-                        and Cell Viability in Nozzle Printheads for 3D Extrusion Bioprinting<br>
+                        Presentation Title: <u>A Numerical Investigation of Stresses, Printing Efficiency, Printability,
+                            and Cell Viability in Nozzle Printheads for 3D Extrusion Bioprinting</u><br>
                         <b>Colin Zhang</b>, Mitsuyuki Hidaka, Masaru Kojima, Shinji
                         Sakai, and Yasunori Okano <a
                             href="https://www4.scej.org/meeting/53f/prog/en_progsearch.html?Ae=Zhang%20Colin"><i
