--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i
                             class="fa-brands fa-square-js"></i></a>
                     <footer>
-                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2024
+                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2025
                             <a href="https://github.com/KORINZ">KORINZ</a>. All rights reserved.</span>
                     </footer>
                 </nav>
@@ -143,7 +143,7 @@
 
                 <h2>Hello, World!</h2>
 
-                <p>I'm Colin Zhang, currently a Ph.D. student at Osaka University, focusing on computational
+                <p>I'm Colin Zhang, currently a Ph.D. student at The University of Osaka, focusing on computational
                     fluid
                     dynamics, machine learning applications, and 3D bioprinting.
                     My passion with science and engineering started early, but it was during my mechanical
