--- a/index.html
+++ b/index.html
@@ -219,11 +219,30 @@
                             <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="600">
                         </a>
                     </p>
-                    <figcaption><strong>Figure 1. </strong>Graphical workflow for bioprinting optimization: Rheological
+                    <figcaption style="text-align: left;"><strong>Figure 1. </strong>Graphical workflow for bioprinting
+                        optimization: Rheological
                         testing provides ink properties for numerical simulation of needle extrusion, followed by
-                        live/dead cell viability analysis. A machine learning model integrates cell type, ink viscosity,
-                        and extrusion parameters to predict and optimize cell viability outcomes. Created with <a
+                        live/dead cell viability analysis. A machine learning framework integrates cell type, ink
+                        viscosity,
+                        and extrusion parameters to predict and optimize cell viability outcomes. Created in <a
                             href="https://www.biorender.com/">BioRender</a>.
+                    </figcaption>
+                </figure>
+
+                <figure style="text-align: center;">
+                    <p><a href="">
+                            <img src="../../static/GraphicalAbstract2.png" alt="GraphicalAbstract2" width="800">
+                        </a>
+                    </p>
+                    <figcaption style="text-align: left;"><strong>Figure 2. </strong>Overview of the AI-powered printing
+                        performance
+                        (printability) evaluation framework.
+                        Rheological properties of alginate (ALG) and hyaluronate (HA) composite inks are
+                        modeled by support vector regression (SVR) to predict rheological parameters. Regression-based
+                        MLP models are employed to predict the Hausdorff distance (HD) and cell viability.
+                        The HD metric quantitatively assesses the geometric fidelity between printed and designed
+                        structures, while a regression-based CNN directly predicts HD values from grid images. Created
+                        in <a href="https://www.biorender.com/">BioRender</a>.
                     </figcaption>
                 </figure>
 
