Fix typo in research interests section on homepage

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                 <h2>Research Interests <a href="https://en.wikipedia.org/wiki/3D_bioprinting"><i
                             class="fa-brands fa-wikipedia-w"></i></a></h2>
-                <p>3D extrusion bioprinting is advancing rapidly in the field of tissue engineering, enabling the
+                <p>3D bioprinting is advancing rapidly in the field of tissue engineering, enabling the
                     creation of complex, biologically engineered structures with high precision. Key challenges in the
                     process include optimizing needle geometry, extrusion parameters, and maintaining cell viability.
                     Numerical analysis and machine learning are increasingly applied to control factors such as fluid
