--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </script>
     <meta name="viewport" content="initial-scale=1, width=device-width">
     <meta property="og:image" content="static/web_screenshot.png">
-    <link href="static/home.png" rel="icon">
+    <link href="static/home_2.png" rel="icon">
     <link href="static/styles.css" rel="stylesheet">
     <link rel="preload" href="static/GraphicalAbstract1.png" as="image">
 
