--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             <aside class="col-lg">
                 <header>
-                    <h1><a href="">COLIN</a></h1>
+                    <h1><a href="">COLIN <img src="/static/home_2.png" alt="Home Icon" class="home-icon"></a></h1>
 
                     <div class="top-bar">
                         <span>
