Implement code structure updates and remove redundant sections

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                         <span>
                             <a href="templates/ja/index.html" class="language-link"
                                 style="display: inline-flex; align-items: center;">
-                                <strong>日本語</strong>
-                                <i class="fa-solid fa-language"
-                                    style="font-size: 1.35em; margin-left: 0.2em; line-height: 1;"></i>
+                                <strong>日本語&nbsp;</strong>
+                                <img src="/static/Flag_of_Japan.png" alt="Japanese Flag" class="flag-icon">
                             </a>
                         </span>
 
