Add target="_blank" to BioRender links for improved user experience

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         live/dead cell viability analysis. A machine learning framework integrates cell type, ink
                         viscosity,
                         and extrusion parameters to predict and optimize cell viability outcomes. Created in <a
-                            href="https://www.biorender.com/">BioRender</a>.
+                            href="https://www.biorender.com/" target="_blank">BioRender</a>.
                     </figcaption>
                 </figure>
 
@@ -202,7 +202,7 @@
                         MLP models are employed to predict the Hausdorff distance (HD) and cell viability.
                         The HD metric quantitatively assesses the geometric fidelity between printed and designed
                         structures, while a regression-based CNN directly predicts HD values from grid images. Created
-                        in <a href="https://www.biorender.com/">BioRender</a>.
+                        in <a href="https://www.biorender.com/" target="_blank">BioRender</a>.
                     </figcaption>
                 </figure>
 
